[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/heart-full.png" type="Texture" id=3]
[ext_resource path="res://ui/Game_UI.gd" type="Script" id=4]

[node name="Game_UI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardContainer" type="HBoxContainer" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -328.0
margin_top = -145.0
margin_right = 328.0
margin_bottom = -17.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" parent="HUD/CardContainer" instance=ExtResource( 1 )]
margin_right = 128.0
margin_bottom = 192.0
card_type = 5

[node name="Card2" parent="HUD/CardContainer" instance=ExtResource( 1 )]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 192.0
card_type = 3

[node name="Card3" parent="HUD/CardContainer" instance=ExtResource( 1 )]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 192.0
card_type = 1

[node name="Card4" parent="HUD/CardContainer" instance=ExtResource( 1 )]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 192.0
card_type = 2

[node name="Card5" parent="HUD/CardContainer" instance=ExtResource( 1 )]
margin_left = 528.0
margin_right = 656.0
margin_bottom = 192.0
card_type = 4

[node name="EndTurn" type="Button" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.095
margin_top = -74.415
margin_right = -40.0952
margin_bottom = -54.415
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="HUD/EndTurn"]
margin_left = -51.8434
margin_top = -68.8666
margin_right = 146.157
margin_bottom = -37.8666
text = "End turn early and
 lose one life"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 57.2789
margin_top = -91.1428
margin_right = 130.279
margin_bottom = -60.1428
text = "3/3
Actions left"
align = 1

[node name="Points" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.568
margin_top = 21.4796
margin_right = 35.432
margin_bottom = 35.4796
text = "999 Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HarvestPoints" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.568
margin_top = 52.9711
margin_right = 35.432
margin_bottom = 66.9711
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turns" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.949
margin_top = 20.0476
margin_right = -138.949
margin_bottom = 34.0476
text = "Turn 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="HBoxContainer" parent="HUD"]
margin_left = 49.6849
margin_top = 25.2497
margin_right = 249.685
margin_bottom = 89.2497

[node name="Heart" type="TextureRect" parent="HUD/LivesContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Heart2" type="TextureRect" parent="HUD/LivesContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Heart3" type="TextureRect" parent="HUD/LivesContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Gameover" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameover" type="Label" parent="Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.7839
margin_top = -346.029
margin_right = 39.2161
margin_bottom = -332.029
grow_horizontal = 2
grow_vertical = 2
text = "Game over!"
align = 1

[node name="PointLabel" type="Label" parent="Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.9598
margin_top = -316.112
margin_right = 64.0402
margin_bottom = -302.112
grow_horizontal = 2
grow_vertical = 2
text = "Your point total is:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.9598
margin_top = -280.655
margin_right = 64.0402
margin_bottom = -266.655
grow_horizontal = 2
grow_vertical = 2
text = "999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.89197
margin_top = -254.876
margin_right = 7.10803
margin_bottom = -234.876
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/EndTurn" to="." method="_on_End_Turn_pressed"]
[connection signal="pressed" from="Gameover/Restart" to="." method="_on_Restart_pressed"]
